--- a/trunk/x10.compiler/build.xml
+++ b/trunk/x10.compiler/build.xml
@@ -113,17 +113,18 @@
     </target>
     <target name="zip" depends="set-version,dist">
         <zip destfile="${x10.home}/x10-${zip.version}.zip">
-            <zipfileset prefix="" dir="${x10.common.location}" includes="epl-v10.html"/>
-            <zipfileset prefix="bin" dir="${x10.common.location}/bin" includes="newpgrp,x10,x10c,testScript*"/>
+            <zipfileset prefix="" dir="${x10.common.location}" includes="epl-v10.html,RELEASE.NOTES"/>
+            <zipfileset prefix="bin" dir="${x10.common.location}/bin" includes="setupX10,newpgrp,x10,x10c,testScript*"/>
+            <zipfileset prefix="doc" dir="${x10.common.location}/doc" excludes="**/CVS/**"/>
             <zipfileset prefix="etc" dir="${etc}" includes="${config}"/>
-            <zipfileset prefix="examples" dir="${x10.common.location}/examples" includes="README,**/*.x10,**/.ThisIsAnX10TestDirectory"/>
+            <zipfileset prefix="examples" dir="${x10.common.location}/examples" includes="README,**/*.x10,**/.ThisIsAnX10TestDirectory" excludes="**/CVS/**"/>
             <zipfileset prefix="lib" dir="${lib}" includes="*.jar" excludes="${polyglot.jar},${lpg.jar}"/>
         </zip>
     </target>
     <target name="src-zip" depends="srczip"/>
     <target name="srczip" depends="set-version,build">
         <zip destfile="${x10.home}/x10-${zip.version}-src.zip">
-            <zipfileset prefix="" dir="${x10.common.location}" includes="epl-v10.html"/>
+            <zipfileset prefix="" dir="${x10.common.location}" includes="epl-v10.html,RELEASE.NOTES"/>
             <zipfileset prefix="x10.common" dir="${x10.common.location}" excludes="**/CVS/**,lib/**,etc/**" includes="build*,bin/*.in,bin/testScript*,bin/newpgrp,examples/README,**/*.x10,**/.ThisIsAnX10TestDirectory"/>
             <zipfileset prefix="x10.compiler" dir="${basedir}" excludes="**/CVS/**,classes/**"/>
             <zipfileset prefix="x10.runtime" dir="${x10.runtime.location}" excludes="**/CVS/**,classes/**"/>
