--- a/x10.lib/src/sched/Makefile
+++ b/x10.lib/src/sched/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.11 2007-06-28 16:59:59 rajbarik Exp $
+# $Id: Makefile,v 1.12 2007-07-02 15:11:20 sriramk Exp $
 # This file is part of X10 Runtime System.
 #
 
@@ -19,10 +19,11 @@ MAKE = make
 #CXX = mpCC_r -q64 -qarch=pwr5
 CXX = xlC_r
 #DEFS += -DNDEBUG
-CXXFLAGS = -g #-q64 #-qarch=pwr5 -qmaxmem=-1 #-qunwind #-ma -qhot #-Q -qinline #-g #-qtune=pwr5 -O3 -qhot
+CXXFLAGS = -g -O3 -ma -qrtti -q64 #-ma -qarch=pwr5 -qinline  #-qmaxmem=-1 #-qunwind #-ma -qhot #-Q -qinline #-g #-qtune=pwr5 -O3 -qhot
+#-pg -pthread 
 
 INCLUDES = -I../../include
-LINKFLAGS = -r #-b64
+LINKFLAGS = -r -b64
 RM = rm -f
 LD = ld
 AR = ar
@@ -73,7 +74,7 @@ install:
 
 Fib.x: Fib.cc $(SCHED_A)
 	$(CXX) $(CXXFLAGS) $(LIBS) $(DEFS) $(INCLUDES) Fib.cc $(SCHED_A) -o Fib.x
-	
+
 NQueensC.x: NQueensC.cc $(SCHED_A)
 	$(CXX) $(CXXFLAGS) $(LIBS) $(DEFS) $(INCLUDES) NQueensC.cc $(SCHED_A) -o NQueensC.x
 
