--- a/x10.apps/experiments/RandomAccess/Makefile
+++ b/x10.apps/experiments/RandomAccess/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.1 2007-07-03 11:25:54 ganeshvb Exp $
+# $Id: Makefile,v 1.2 2007-07-06 15:26:35 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 
@@ -23,7 +23,7 @@ all:
 clean:
 	(cd x10lib; $(MAKE) $@)
 	(cd x10c; $(MAKE) $@)
-	(cd hpcc-opt; $(MAKE) $@)
+	(cd hpcc-opt; $(MAKE) arch=$(ARCH) $@)
 
 realclean: clean
 	$(RM) -r $(INCDIR) $(LIBDIR)
