--- a/x10.man/paper/Makefile
+++ b/x10.man/paper/Makefile
@@ -10,7 +10,7 @@ TARGETS = paper.pdf
 # TARGETS could be $(DOC).dvi instead, if there are no figures
 
 TEXS = paper.tex \
-	conclusion.tex examples.tex future.tex impl.tex intro.tex lang.tex longex.tex paper.tex related.tex semantics.tex \
+	conclusion.tex examples.tex future.tex impl.tex intro.tex lang.tex longex.tex paper.tex related.tex semantics.tex abstract.tex \
        $(X10TEXS) $(STY)
 STY = defs.sty utils.sty
 #
