--- a/x10.lib/src/Makefile
+++ b/x10.lib/src/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.34 2007-06-28 16:52:19 ganeshvb Exp $
+# $Id: Makefile,v 1.35 2007-08-07 06:21:52 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 
@@ -16,7 +16,7 @@ SUBDIRS = $(SUBDIR1) $(SUBDIR2)
 LIBDIR = ../lib
 CXX = mpCC_r 
 DEFS = -DNDEBUG -DX10_DLEVEL=0
-CXXFLAGS = -qtune=pwr5 -O3 -q64 -qarch=pwr5 -qhot 
+CXXFLAGS = -g #-qtune=pwr5 -O3 -q64 -qarch=pwr5 -qhot 
 INCLUDES = -I. -I../include 
 LINKFLAGS =
 RM = rm -f
@@ -41,14 +41,15 @@ ARRAY_A = $(SUBDIR1)/array.a
 SRCS = aggregate.cc async.cc env.cc err.cc finish.cc gas.cc lock.cc \
 		order.cc progress.cc \
 		register.cc rmc.cc switch.cc x10lib.cc asyncSwitch.cc \
-		utility.cc
+		utility.cc misc.cc clock.cc
 OBJS = aggregate.o async.o env.o err.o finish.o gas.o lock.o \
 		order.o progress.o \
 		register.o rmc.o switch.o x10lib.o asyncSwitch.o \
-		utility.o
+		utility.o misc.o clock.o
 HEADERS = env.h err.h gas.h lock.h order.h progress.h \
 		register.h rmc.h switch.h types.h x10lib.h xassert.h \
-		xmacros.h aggregate.h async.h finish.h utility.h
+		xmacros.h aggregate.h async.h finish.h utility.h misc.h \
+                clock.h
 
 all: $(LIBTARGET) 
 
