--- a/x10.lib/src/array/Makefile
+++ b/x10.lib/src/array/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.6 2007-06-28 16:52:20 ganeshvb Exp $
+# $Id: Makefile,v 1.7 2007-08-21 06:10:25 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 
@@ -11,8 +11,8 @@
 
 MAKE = make
 CXX = mpCC_r -q64 -qarch=pwr5
-DEFS = -DDEBUG -DX10_DLEVEL=0
-CXXFLAGS = -qtune=pwr5 -O3 -qhot
+DEFS = -DNDEBUG -DX10_DLEVEL=0
+CXXFLAGS = -qtune=pwr5 -O3 -qinline -qhot -g
 INCLUDES = -I. -I.. -I../../include
 LINKFLAGS = -r -b64
 RM = rm -f
